// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly 1`] = `
<Fragment>
  <Suggestions
    suggestions="project_baseline"
  />
  <div
    className="page page-limited"
  >
    <AppHeader
      canAdmin={true}
    />
    <div
      className="panel-white project-baseline"
    >
      <h2>
        project_baseline.default_setting
      </h2>
      <ProjectBaselineSelector
        analysis=""
        branch={
          {
            "analysisDate": "2018-01-01",
            "excludedFromPurge": true,
            "isMain": false,
            "name": "branch-6.7",
          }
        }
        branchList={
          [
            {
              "analysisDate": "2018-01-01",
              "excludedFromPurge": true,
              "isMain": true,
              "name": "master",
            },
          ]
        }
        branchesEnabled={true}
        component="my-project"
        currentSetting="PREVIOUS_VERSION"
        days="30"
        generalSetting={
          {
            "type": "PREVIOUS_VERSION",
          }
        }
        onCancel={[Function]}
        onSelectAnalysis={[Function]}
        onSelectDays={[Function]}
        onSelectReferenceBranch={[Function]}
        onSelectSetting={[Function]}
        onSubmit={[Function]}
        onToggleSpecificSetting={[Function]}
        overrideGeneralSetting={true}
        referenceBranch="master"
        saving={false}
        selected="PREVIOUS_VERSION"
      />
      <div
        className="spacer-top invisible"
      >
        <span
          className="text-success"
        >
          <AlertSuccessIcon
            className="spacer-right"
          />
          settings.state.saved
        </span>
      </div>
      <div
        className="huge-spacer-top branch-baseline-selector"
      >
        <hr />
        <h2>
          project_baseline.configure_branches
        </h2>
        <BranchList
          branchList={
            [
              {
                "analysisDate": "2018-01-01",
                "excludedFromPurge": true,
                "isMain": true,
                "name": "master",
              },
            ]
          }
          component={
            {
              "breadcrumbs": [],
              "key": "my-project",
              "name": "MyProject",
              "qualifier": "TRK",
              "qualityGate": {
                "isDefault": true,
                "key": "30",
                "name": "Sonar way",
              },
              "qualityProfiles": [
                {
                  "deleted": false,
                  "key": "my-qp",
                  "language": "ts",
                  "name": "Sonar way",
                },
              ],
              "tags": [],
            }
          }
          inheritedSetting={
            {
              "type": "PREVIOUS_VERSION",
              "value": undefined,
            }
          }
        />
      </div>
    </div>
  </div>
</Fragment>
`;

exports[`should render correctly: without branch support 1`] = `
<Fragment>
  <Suggestions
    suggestions="project_baseline"
  />
  <div
    className="page page-limited"
  >
    <AppHeader
      canAdmin={true}
    />
    <div
      className="panel-white project-baseline"
    >
      <ProjectBaselineSelector
        analysis=""
        branch={
          {
            "analysisDate": "2018-01-01",
            "excludedFromPurge": true,
            "isMain": false,
            "name": "branch-6.7",
          }
        }
        branchList={
          [
            {
              "analysisDate": "2018-01-01",
              "excludedFromPurge": true,
              "isMain": true,
              "name": "master",
            },
          ]
        }
        branchesEnabled={false}
        component="my-project"
        currentSetting="PREVIOUS_VERSION"
        days="30"
        generalSetting={
          {
            "type": "PREVIOUS_VERSION",
          }
        }
        onCancel={[Function]}
        onSelectAnalysis={[Function]}
        onSelectDays={[Function]}
        onSelectReferenceBranch={[Function]}
        onSelectSetting={[Function]}
        onSubmit={[Function]}
        onToggleSpecificSetting={[Function]}
        overrideGeneralSetting={true}
        referenceBranch="master"
        saving={false}
        selected="PREVIOUS_VERSION"
      />
      <div
        className="spacer-top invisible"
      >
        <span
          className="text-success"
        >
          <AlertSuccessIcon
            className="spacer-right"
          />
          settings.state.saved
        </span>
      </div>
    </div>
  </div>
</Fragment>
`;
